# fido-gdd-plugin

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  INSTALL.md  README.md  package-lock.json  package.json  pyproject.toml
.agents/plugins/: marketplace.json
.github/workflows/: showcase-pages.yml
docs/: GDD_Drift_Detector_MVP_Architecture.md
docs/adr/: 0001-scan-advisories-vs-partial.md  0035-stable-local-detector-boundary.md
plugins/gdd-drift-detector/scripts/: detect-drift.py  fido-context-hook.sh  fido-context.py  launcher_runtime.py
plugins/gdd-drift-detector/skills/detect-drift/: SKILL.md
plugins/gdd-drift-detector/skills/setup-gdd/: SKILL.md
release/: README.md
scripts/: build_standalone_plugin_zip.py
showcase/godot-deckbuilder/: GDD.md  README.md  WEB_EXPORT.md  ai_controller.gd  deck_builder.gd  drift.json  drift_report.md  export_presets.cfg  main.gd  main.tscn  orphan_logger.gd  project.godot
showcase/site/: index.html  package-lock.json  package.json  vite.config.ts  wrangler.jsonc
showcase/site/public/: _headers
showcase/site/src/: App.tsx  types.ts
src/gdd_drift_detector/: __init__.py  __main__.py  cli.py  context_block.py  context_file.py  context_freshness.py  discovery.py  gdd_parse.py  models.py  scanner.py
src/gdd_drift_detector/commands/: context.py  init.py
tests/: test_cli.py  test_context_block.py  test_plugin_package.py  test_release_acceptance.py  test_scan_contract.py  test_setup_skill_contract.py  test_showcase_fixture.py  test_showcase_site.py
tests/fixtures/godot-project/: GDD.md  project.godot
(+13 files in other folders)
